--- a/guilds/pom.xml
+++ b/guilds/pom.xml
@@ -9,10 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>br.com.legion.glory.points</groupId>
-    <artifactId>glory-points</artifactId>
+    <groupId>br.com.legion.guilds</groupId>
+    <artifactId>guilds</artifactId>
 
-    <name>Glory-Points</name>
+    <name>Guilds</name>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -42,5 +42,13 @@
             </resource>
         </resources>
     </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>br.com.legion.glory.points</groupId>
+            <artifactId>glory-points</artifactId>
+            <version>0.1-ALPHA</version>
+        </dependency>
+    </dependencies>
 
 </project>
