--- a/guilds/src/main/resources/config.yml
+++ b/guilds/src/main/resources/config.yml
@@ -5,4 +5,10 @@ bank-limit: #pelos léveis
   2: 2000
   3: 3000
 
+maintenance:
+  1: 1000
+  2: 2000
+  3: 3000
+  cooldown: 3
+
 price-to-create: 100000
