--- a/guilds/src/main/resources/plugin.yml
+++ b/guilds/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: ${project.name}
+name: L-Guilds
 main: br.com.legion.guilds.GuildsPlugin
 version: 0.1-ALPHA
-depend: [API-Spigot, Glory-Points, Guilds-Framework]
+depend: [API-Spigot, L-GloryPoints, Guilds-Framework]
