--- a/essentials/pom.xml
+++ b/essentials/pom.xml
@@ -17,4 +17,20 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>focamacho-repo</id>
+            <name>Focamacho Maven Repository</name>
+            <url>https://repo.focamacho.com/repository/releases/</url>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.focamacho</groupId>
+            <artifactId>sealconfig</artifactId>
+            <version>1.2.2</version>
+        </dependency>
+    </dependencies>
+
 </project>
