tab só falta placeholders;

--- a/tablist/src/main/resources/plugin.yml
+++ b/tablist/src/main/resources/plugin.yml
@@ -1,7 +1,5 @@
-name: L-TabList
-author: yiatzz
-version: 0.1-ALPHA
-main: br.com.legion.tablist.TablistPlugin
-
-depend:
-  - helper
+name: NametagEdit
+main: com.nametagedit.plugin.NametagEdit
+version: 4.4.10
+authors: [ sgtcaze, Cory, yiatzz ]
+soft-depend: [ LuckPerms ]
