--- a/tablist/pom.xml
+++ b/tablist/pom.xml
@@ -34,10 +34,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.MilkBowl</groupId>
-            <artifactId>VaultAPI</artifactId>
-            <version>1.7</version>
-            <scope>provided</scope>
+            <groupId>net.luckperms</groupId>
+            <artifactId>api</artifactId>
+            <version>5.3</version>
         </dependency>
 
     </dependencies>
